tests/esproposal_class_instance_fields.warn/esproposal_class_instance_fields.warn.exp
Error -------------------------------------------------------------- test.js:5:3

Error: test.js:5
  5:   initOnly = 'asdf';
       ^^^^^^^^^^^^^^^^^^ Experimental class instance field usage. Class instance fields are an active early stage feature proposal that may change. You may opt-in to using them anyway in Flow by putting `esproposal.class_instance_fields=enable` into the `[options]` section of your `.flowconfig`.

Error -------------------------------------------------------------- test.js:6:3

Error: test.js:6
  6:   initWithAnnotation: string = 'asdf';
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Experimental class instance field usage. Class instance fields are an active early stage feature proposal that may change. You may opt-in to using them anyway in Flow by putting `esproposal.class_instance_fields=enable` into the `[options]` section of your `.flowconfig`.


Found 2 errors
